user command and handler. Also I have installed the mediatr lib

--- a/ApiTasks/Application/Application.csproj
+++ b/ApiTasks/Application/Application.csproj
@@ -7,9 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="UsersUseCase\Validators\" />
   </ItemGroup>
 
 </Project>
