jwt register and set

--- a/ApiTasks/API/appsettings.json
+++ b/ApiTasks/API/appsettings.json
@@ -8,5 +8,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Issuer": "Tasks-App-2024",
+    "Audience": "WebApp_JS/TS",
+    "Key": "(2904.NET/(+=====+2024-04*!@TasksApp%$$$)",
+    "TokenExpirationTimeInDays": 7,
+    "RefreshTokenExpirationTimeInDays": 7
+  }
 }
