--- a/ApiTasks/API/appsettings.json
+++ b/ApiTasks/API/appsettings.json
@@ -14,6 +14,7 @@
     "Audience": "WebApp_JS/TS",
     "Key": "(2904.NET/(+=====+2024-04*!@TasksApp%$$$)",
     "TokenExpirationTimeInDays": 7,
-    "RefreshTokenExpirationTimeInDays": 7
+    "RefreshTokenExpirationTimeInDays": 7,
+    "CookiesExpirationTime": 7
   }
 }
